# Embedded_Linux_Diploma_Tasks

Week1_Tasks/: task1.py  task1b.py  task2.py  task2b.py  task3.py  task4.py  task5.py  task6.py
Week2_Tasks/Friday/: task2.py  task3.py  task4.py
Week2_Tasks/Friday/Task1/: firelink.py  task1.py
Week2_Tasks/Saturday/: header_files.xlsx  task1.py  task10.py  task11.py  task12.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py  textfile.txt
Week3_Tasks/Friday/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7_client.py  task7_server.py
Week3_Tasks/Saturday/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
Week4_Tasks/: contacts.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
Week5_Tasks/Friday/: task1.cpp  task10.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
Week5_Tasks/Saturday/: task1.cpp
Week5_Tasks/Saturday/Task_2/: ConfigReader.cpp  ConfigReader.h  config.txt  logger.cpp  logger.h  task2.cpp
Week6_Tasks/: task1.cpp  task2.cpp
Week7_Tasks/: task1.txt  task2.py  task3.cpp
Week7_Tasks/my_app/: CMakeLists.txt  main.cpp
Week7_Tasks/my_library/: CMakeLists.txt  my_lib.cpp
Week8_Tasks/: battery_check.sh  catch_interrupt.py  kill_firefox.py  send_whatsapp_message.py  task.cpp  uptime_report.py
Week9_Tasks/: Development_Assistant.md  calc.sh  create_project.sh  development_helper.sh  systemd_service.sh  youtube_downloader.sh
Week9_Tasks/test/: Makefile
(+1 files in other folders)
